--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <section class="mission">
     <div class="container">
       <h2>Our Mission</h2>
-      <p>We're a company that's dedicated to building the future of AI. Our team of experts is working hard to create cutting-edge technology that will change the world.</p>
+      <p>We're a startup that's dedicated to building the future of AI. Our team of experts is working hard to create cutting-edge technology that will change the world.</p>
     </div>
   </section>
 
